# Modular_Orbit

./: .dockerignore  .gitignore  PROJECT_REPORT.md  README.md  UBIQUITOUS_LANGUAGE.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  curious.py  documents.py  item_chat.py  logs.py  output_modules.py  plans.py  routine.py  shell.py  story_weave.py  tasks.py  user_model.py
backend/app/chat/: __init__.py  actions.py  item_chat.py  sessions.py
backend/app/core/: config.py
backend/app/db/: __init__.py  bootstrap.py  connection.py  schema.py
backend/app/lifecycle/: __init__.py  bucket_keys.py  connection_review.py  derived.py  life_items.py  story_weave.py
backend/app/llm/: __init__.py  client.py
backend/app/modules/: __init__.py  companion.py  contracts.py  curious.py  definitions.py  documents.py  logs.py  output.py  plan_parser.py  plans.py  registry.py  routine.py  (+2 more)
backend/tests/: conftest.py  test_bucket_keys.py  test_chat_actions.py  test_chat_history.py  test_chat_streaming.py  test_companion.py  test_connection_review.py  test_curious_module.py  test_documents_module.py  test_item_chat.py  test_life_item_service.py  test_llm_client.py  test_logs_module.py  test_module_registry.py  test_output_modules.py  test_plans_module.py  test_rag_retrieval.py  test_routine_module.py  test_schema.py  test_shell.py  test_story_weave.py  test_tasks_module.py  test_user_facts.py  test_user_model.py  test_user_model_context.py  test_user_model_migrate.py  test_user_model_weave.py
(+83 files in other folders)
