[project]
name = "modular-orbit-backend"
version = "0.1.0"
description = "Fresh-start modular Orbit backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
modular-orbit-bootstrap = "app.db.bootstrap:bootstrap_database"
modular-orbit-backfill-embeddings = "app.rag.backfill:main"
